# fist

./: .geminiignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  TODO.sync-conflict-20260319-124213-HQ4HLQZ.md  build.rs  install.sh  log  rustfmt.toml
.github/workflows/: build-release.yml
assets/: install.sh  shell.zsh
assets/completions/: _fs  _fs.ps1  fs.bash  fs.fish
assets/config/: config.toml  dev.toml  lessfilter.dev.toml  lessfilter.toml  mm.dev.toml  mm.toml
assets/scripts/: fist_binary_viewer  fist_header_viewer  fist_metadata_viewer  fist_show_error  fist_sqlite_viewer  liza  lz  pager
assets/shell/: aliases.shrc  o  shell.zsh
fist-types/: Cargo.toml  README.md
fist-types/src/: categories.rs  categories_phf.rs  filetypes.rs  filters.rs  ft_arg.rs  git.rs  icons.rs  lib.rs
src/: abspath.rs  aliases.rs  clipboard.rs  config.rs  errors.rs  filters.rs  lib.rs  main.rs  shell.rs  watcher.rs
src/cli/: clap.rs  clap_.rs  clap_helpers.rs  clap_tools.rs  config.rs  env.rs  handlers.rs  matchmaker.rs  mm_partial.rs  mod.rs  paths.rs  tool_types.rs  types.rs
src/config/: mod.rs  panes.rs  partial.rs  stash.rs  ui.rs
src/db/: connection.rs  crud.rs  display.rs  entry.rs  mod.rs  zoxide.rs
src/find/: apps.rs  fd.rs  ft_arg.rs  mod.rs  rg.rs  size.rs  walker.rs
src/fs/: mod.rs
src/lessfilter/: action.rs  application_helper.rs  config.rs  env.rs  file_rule.rs  helpers.rs  mime_helpers.rs  mod.rs  rule_matcher.rs  tests.rs
src/lessfilter/tests/: lessfilter.toml
src/run/: action.rs  ahandler.rs  ahandlers.rs  binds.rs  dhandlers.rs  fsaction.rs  fspane.rs  globals.rs  item.rs  mm_config.rs  mod.rs  pane.rs  populate.rs  populate_rg.rs  previewer.rs  start.rs  styles.rs
src/run/globals/: filters.rs  stack.rs
src/run/stash/: exclusive_list.rs  execute.rs  mod.rs  scratch_list.rs  status.rs
src/run/state/: context.rs  filters.rs  mod.rs  stack.rs  temp.rs  ui.rs
src/spawn/: menu_action.rs  mod.rs  program.rs  utils.rs
src/ui/: confirm_overlay.rs  filters_overlay.rs  global.rs  input.rs  menu_overlay.rs  menu_overlay_impl.rs  mod.rs  prompt_overlay.rs  stash_overlay.rs  styles_config.rs
src/utils/: categories.rs  colors.rs  filetypes.rs  formatter.rs  icons.rs  mod.rs  path.rs  prompt.rs  serde.rs  string.rs  text.rs  trash.rs  types.rs
