[package]
    name         = "fist"
    version      = "0.0.2"
    edition      = "2024"
    license-file = "LICENSE"
    repository   = "https://github.com/Squirreljetpack/fist"
    description  = "Fist: Interactive Search Tool"

[dependencies]
    cli_boilerplate_automation = { version = "0.0.11", features = [ "text", "serde" ] }
    matchmaker-lib             = { version = "0.0", features = [ "bracketed-paste", "experimental" ] }

    # tui + text
    atty                 = "0.2.14"
    ansi-to-tui          = "8.0.1"
    comfy-table          = "7.2.2"
    crossterm            = "0.29.0"
    ratatui              = { version = "0.30.0", features = [ "serde" ] }
    shell-words          = "1.1.1"
    unicode-segmentation = "1.12.0"
    unicode-width        = "^0.2.2"

    # standard
    anyhow       = "1.0.101"
    arrayvec     = { version = "0.7.6", features = [ "serde" ] }
    bitflags     = "2.11"
    cfg-if       = "1.0.4"
    chrono       = { version = "0.4.43", features = [ "serde" ] }
    clap         = { version = "4.5.58", features = [ "derive" ] }
    dirs         = "6.0.0"
    easy-ext     = "1.0.2"
    env_logger   = "0.11.9"
    globset      = "0.4.18"
    ignore       = "0.4.25"
    indexmap     = { version = "2.13.0", features = [ "serde" ] }
    log          = "0.4.29"
    phf          = { version = "0.13.1", features = [ "macros", "phf_macros" ] }
    serde        = "1.0.228"
    strum        = { version = "0.27.2", features = [ "strum_macros" ] }
    strum_macros = "0.27.2"
    sqlx         = { version = "0.8.6", features = [ "sqlite", "runtime-tokio-rustls" ] }
    thiserror    = "2.0.18"
    tokio        = "1.49.0"
    toml         = "0.9.8"

    # filesystem
    arboard  = { version = "3.6.1", features = [ "wayland-data-control" ] }
    fs_extra = "1.3.0"
    image    = { version = "0.25.9", default-features = false, features = [  ] }
    notify   = "8.2.0"
    trash    = "5.2.5"
    rayon    = "1.11.0"

    # lessfilter
    infer       = { version = "0.19.0", optional = true }
    file-format = { version = "0.28.0", default-features = false, optional = true }
    mime_guess  = "2.0.5"
    # kreuzberg             = { version = "4.2.14", optional = true }
    charset-normalizer-rs = { version = "1.1.0" }

[dev-dependencies]
    tempfile = "3.25.0"
    tokio    = { version = "1.49.0", features = [ "macros", "rt-multi-thread" ] }

[build-dependencies]
    clap                       = { version = "4.5.58", features = [ "derive" ] }
    clap_complete              = "4.5.66"
    strum                      = { version = "0.27.2", features = [ "strum_macros" ] }
    strum_macros               = "0.27.2"
    thiserror                  = "2.0.17"
    dirs                       = "6.0.0"
    cli_boilerplate_automation = { version = "0.0.11" }

[[bin]]
    name = "fs"
    path = "src/main.rs"

[lints.clippy]
    new_without_default   = "allow"
    collapsible_if        = "allow"
    single_match          = "allow"
    uninlined_format_args = "allow"

[features]
    default            = [ "image-defaults", "file-format" ]
    image-defaults     = [ "image/png", "image/jpeg" ]
    image-all          = [ "image/png", "image/jpeg", "image/gif", "image/bmp", "image/ico", "image/tiff", "image/webp" ]
    infer              = [ "dep:infer" ]
    file-format        = [ "dep:file-format" ]
    file-format-reader = [ "file-format/reader" ]

[patch.crates-io]
    nucleo = { git = "https://github.com/Squirreljetpack/nucleo", branch = "mm" }
