[workspace]
members = [
  ".",
  "fist-types",
  # "fist-system"
]

[workspace.package]
version = "0.0.3"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Squirreljetpack/fist"

[workspace.dependencies]
cli_boilerplate_automation = { version = "0.*", features = ["bring", "serde"] }
fist-types = { version = "0.0.*", path = "fist-types" }
phf = { version = "0.13.1", features = ["macros", "phf_macros"] }
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"

clap = { version = "4.5.58", features = ["derive"] }
clap_complete = "4.5.66"
dirs = "6.0.0"
file-format = { version = "0.28.0", default-features = false }
serde = "1.0.228"
thiserror = "2.0.18"

[package]
name = "fist"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Fist: Interactive Search Tool"

[dependencies]
cli_boilerplate_automation = { workspace = true }
fist-types = { workspace = true, features = ["serde", "file-format"] }
matchmaker-lib = { version = "0.0.*", features = ["bracketed-paste"] }
matchmaker-partial = { version = "0.0.*", optional = true }
matchmaker-partial-macros = { version = "0.0.*", features = [
  "partial",
], optional = true }

# tui + text
ansi-to-tui = "8.0.1"
atty = "0.2.14"
comfy-table = "7.2.2"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["serde"] }
shell-words = "1.1.1"
unicode-segmentation = "1.12.0"
unicode-width = "^0.2.2"

# standard
anyhow = "1.0.101"
arrayvec = { version = "0.7.6", features = ["serde"] }
bitflags = "2.11"
cfg-if = "1.0.4"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { workspace = true }
dirs = { workspace = true }
easy-ext = "1.0.2"
env_logger = "0.11.9"
globset = "0.4.18"
ignore = "0.4.25"
indexmap = { version = "2.13.0", features = ["serde"] }
log = "0.4.29"
phf = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = "1.49.0"
toml = "0.9.8"

# filesystem
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
fs_extra = "1.3.0"
image = { version = "0.25.9", default-features = false, features = [] }
notify = "8.2.0"
rayon = "1.11.0"
trash = "5.2.5"

# lessfilter
anymap = "0.12.1"
atoi = "2.0.0"
charset-normalizer-rs = { version = "1.1.0" }
file-format = { workspace = true, optional = true }
infer = { version = "0.19.0", optional = true }
mimalloc = { version = "*", features = ["v3"] }
mime_guess = "2.0.5"
sysinfo = { version = "0.39.5", default-features = false, features = ["system", "disk"] }

[dev-dependencies]
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
fist-types = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
cli_boilerplate_automation = { workspace = true }

[[bin]]
name = "fs"
path = "src/main.rs"

[lints.clippy]
new_without_default = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
single_match = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"

[features]
default = ["image-defaults", "file-format", "file-format-reader", "partial"]

partial = [
  "matchmaker-lib/partial",
  "matchmaker-lib/experimental",
  "matchmaker-partial",
  "matchmaker-partial-macros/partial",
]
mm_overrides = ["partial"]

image-defaults = ["image/png", "image/jpeg"]
image-all = [
  "image/png",
  "image/jpeg",
  "image/gif",
  "image/bmp",
  "image/ico",
  "image/tiff",
  "image/webp",
]

file-format = ["dep:file-format"]
file-format-reader = ["file-format", "file-format/reader"]
infer = ["dep:infer"]

[patch.crates-io]
nucleo = { git = "https://github.com/Squirreljetpack/nucleo", branch = "mm" }
matchmaker-lib = { path = "../matchmaker/matchmaker-lib" }
matchmaker-partial = { path = "../matchmaker/matchmaker-partial" }
matchmaker-partial-macros = { path = "../matchmaker/matchmaker-partial-macros" }
